--- a/www/js/locales/en.json
+++ b/www/js/locales/en.json
@@ -5,6 +5,7 @@
   "SIGN_UP": "Sign up",
   "LOG_IN": "Login",
   "SKIP": "Skip intro",
+  "SEARCH": "Search",
   "OR_FACEBOOK": "Or sign up using Facebook",
   "FIND_YOUR_ADVENTURE": "Find your newxt adventure",
   "SWIPE_FOR_TOUR": "Swipe left to take a tour",
