various fixes among them the map and scroll on activity show

--- a/www/js/locales/en.json
+++ b/www/js/locales/en.json
@@ -7,7 +7,7 @@
   "SKIP": "Skip intro",
   "SEARCH": "Search",
   "OR_FACEBOOK": "Or sign up using Facebook",
-  "FIND_YOUR_ADVENTURE": "Find your newxt adventure",
+  "FIND_YOUR_ADVENTURE": "Find your next adventure",
   "SWIPE_FOR_TOUR": "Swipe left to take a tour",
   "INTERESTED_CTA": "Interested? Sign up!",
   "REASSURANCE_1": "This will only take 5 seconds",
