--- a/www/js/locales/se.json
+++ b/www/js/locales/se.json
@@ -1,9 +1,16 @@
 {
   "ALREADY_MEMBER": "Redan medlem?",
+  "NOT_A_MEMBER": "Inget konto? Registrera dig!",
   "SIGN_UP_HEADER": "Registrera konto",
   "LOG_IN_WITH_FACEBOOK": "Logga in med Facebook",
+  "SIGN_UP_WITH_FACEBOOK": "Skapa konto med Facebook",
   "SIGN_UP": "Skapa konto",
+  "FORGOT_PASSWORD": "Glömt lösenord?",
   "LOG_IN": "Logga in",
+  "NAME": "Namn",
+  "EMAIL": "Mailadress",
+  "PASSWORD": "Lösenord",
+  "PASSWORD_CONFIRMATION": "Bekräfta lösenord",
   "SKIP": "Hoppa över",
   "SEARCH": "Sök",
   "OR_FACEBOOK": "Vill du hellre logga in via Facebook?",
@@ -17,5 +24,11 @@
   "ADVENTURES_2_HEADER": "Dina äventyr",
   "ADVENTURES_2_SUBHEADER": "Bli inspirerad av andra och dela med dig av egna äventyr",
   "ADVENTURES_3_HEADER": "Äventyrare",
-  "ADVENTURES_3_SUBHEADER": "Du är inte ensam, skaffa nya vänner bland likasinnade"
+  "ADVENTURES_3_SUBHEADER": "Du är inte ensam, skaffa nya vänner bland likasinnade",
+  "TOC_CONSENT": "Genom att logga in, godkänner du AdventureMaps",
+  "TOC": "Användarvillkor",
+  "PRIVACY_POLICY": "Privacy Policy",
+  "COOKIE_POLICY": "Cookie Policy",
+  "DISCLAIMER": "Ansvarsbegränsning",
+  "AND": "och"
 }
