--- a/www/js/locales/se.json
+++ b/www/js/locales/se.json
@@ -15,7 +15,7 @@
   "SEARCH": "Sök",
   "OR_FACEBOOK": "Vill du hellre logga in via Facebook?",
   "FIND_YOUR_ADVENTURE": "Hitta ditt nästa äventyr!",
-  "SWIPE_LEFT": "Svep åt vänster för en kort introduktion.",
+  "SWIPE_FOR_TOUR": "Svep åt vänster för en kort introduktion.",
   "INTERESTED_CTA": "Interesserad? Registrera dig!",
   "REASSURANCE_1": "Det tar bara 5 sekunder",
   "REASSURANCE_2": "Vi kommer aldrig att posta något utan ditt medgivande. Vi lovar!",
