--- a/www/js/locales/se.json
+++ b/www/js/locales/se.json
@@ -55,7 +55,8 @@
     "MY_CONNECTIONS": "Mitt nätverk",
     "MY_RECORDINGS": "Sparade inselningar",
     "ACTIVITIES": "aktiviteter",
-    "EDIT": "Redigera"
+    "EDIT": "Redigera",
+    "UPDATE_PROFILE": "Redigera profil"
   },
   "MAIN": {
     "GETTING_ACTIVITIES": "Hämtar aktiviteter...",
@@ -68,6 +69,10 @@
     "FINISH_SIGN_UP": "Slutför registrering",
     "SIGN_UP": "Skapa konto",
     "SIGNING_UP": "Skapar konto...",
-    "REQUESTING_PASSWORD": "Skickar begäran..."
+    "REQUESTING_PASSWORD": "Skickar begäran...",
+    "SIGNING_OUT": "Loggar ut..."
+  },
+  "ELEMENTS": {
+    "CANCEL": "Avbryt"
   }
 }
